@@ -1,3 +1,10 @@
+2015-03-10  Niels Möller  <nisse@diamant.hack.org>
+
+	* curve25519-mul.c (curve25519_mul): Changed return type to void.
+	* examples/hogweed-benchmark.c (bench_curve25519_mul): Drop check
+	of curve25519_mul return value.
+	* testsuite/curve25519-dh-test.c (test_a): Likewise.
+
 2015-02-26  Niels Möller  <nisse@diamant.hack.org>
 
 	* nettle.texinfo: Document curve25519 and eddsa.
